# symtorch

./: README.md  setup.cfg
examples/: initial_value_problem.py  ivp_noML.py
symtorch/: integrate.py  symbolic.py
test/: test_ivp.py
