[metadata]
name = symtorch
description = PyTorch package for symbolic differential equations.
long_description = file: README.md
long_description_content_type= text/markdown
author = syntensor
author_email = clayton [at] syntensor.com
url = https://github.com/
version = rc1_alpha
license = Apache License, Version 2.0

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.6.0
    torchdiffeq>=0.0.1
    matplotlib
    torchvision
    scikit-learn
    scipy
    sympy
    numpy
    torchsde @ http://github.com/google-research/torchsde/tarball/master#egg=torchsde-0.1.1

[options.extras_require]
all =
test =
    pytest

[options.package_data]